Another temporary save

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
 
     <!-- Flowbite CDN -->
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css"/>
-    <script src="../path/to/flowbite/dist/flowbite.js"></script>
+    <script src="./node_modules/flowbite/dist/flowbite.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
