--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,7 @@
 
 <!-- Flowbite CDN -->
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+<script src="./node_modules/flowbite/dist/flowbite.js"></script>
 </body>
 </html>
 
