--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-    <!-- Flowbite CDN -->
-    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css"/>
-    <script src="./node_modules/flowbite/dist/flowbite.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
@@ -21,7 +18,7 @@
 
 <!-- Flowbite CDN -->
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-<script src="./node_modules/flowbite/dist/flowbite.js"></script>
+<!--<script src="./node_modules/flowbite/dist/flowbite.js"></script>-->
 </body>
 </html>
 
